After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669820 - [PATCH] Fix possible memory leaks in gedit_document_save_as() and gedit_document_save_real()
[PATCH] Fix possible memory leaks in gedit_document_save_as() and gedit_docum...
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
3.3.x
Other Linux
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-10 17:06 UTC by Daniel Trebbien
Modified: 2012-02-10 17:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix (1.03 KB, patch)
2012-02-10 17:07 UTC, Daniel Trebbien
accepted-commit_now Details | Review

Description Daniel Trebbien 2012-02-10 17:06:35 UTC
The GError objects set by g_set_error_literal() need to be freed.
Comment 1 Daniel Trebbien 2012-02-10 17:07:52 UTC
Created attachment 207276 [details] [review]
Fix
Comment 2 Ignacio Casal Quinteiro (nacho) 2012-02-10 17:15:27 UTC
Review of attachment 207276 [details] [review]:

Looks good.