Fix possible memory leaks

The GError objects set by g_set_error_literal() need to be freed with
g_error_free().

https://bugzilla.gnome.org/show_bug.cgi?id=669820